--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -7,7 +7,9 @@ $max-site-width: 1600px;
 $std-content-width-percent: 94%;
 $std-content-width-max: 1204px;
 $skinny-content-width-percent: 88%;
-$skinny-content-width-max: 896px;
+$skinny-content-width-max: 788px;
+$slim-content-width-percent: 90%;
+$slim-content-width-max: 996px;
 
 $wide-content-width-max: 1400px;
 
