--- a/_sass/sections/_images.scss
+++ b/_sass/sections/_images.scss
@@ -1,5 +1,5 @@
 .images-with-captions {
-  @include spacing-std;
+  @include spacing-slim;
 
   background-color: $green-50;
   display: flex;
@@ -9,6 +9,10 @@
 
   @include desktop {
     flex-direction: row;
+  }
+
+  .container {
+    flex: 1 1 0px;
   }
 
   .image-container {
